tests/rosetta/out/Java/a+b.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// a+b.mochi
import java.util.*;

public class A+b {
    static void main() {
        Object a = int(scanner.nextLine());
        Object b = int(scanner.nextLine());
        System.out.println(a + b);
    }
    public static void main(String[] args) {
        main();
    }
}
